src/components/Footer/Footer.css
/* FOOTER */
.footer {
  background: #0b1f4a;
  color: #e2e8f0;
  padding: 60px 20px 40px;
}

/* CONTAINER */
.footer-container {
  max-width: 1100px;
  margin: 0 auto;

  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

/* TOP SECTION */
.footer-top {
  max-width: 700px;
}

.footer-top h3 {
  font-size: 28px;
  color: white;
  margin-bottom: 20px;
}

.footer-top p {
  font-size: 16px;
  line-height: 1.8;
}

/* TEAM LINKS */
.team-links {
  margin-top: 10px;
}

.team-links a {
  color: #93c5fd;
  text-decoration: none;
  font-weight: 500;
  position: relative;
  transition: color 0.3s ease;
}

.team-links a:hover {
  color: #60a5fa;
}

/* TEAM LINK UNDERLINE */
.team-links a::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -3px;
  width: 0%;
  height: 2px;
  background: #60a5fa;
  transition: width 0.3s ease;
}

.team-links a:hover::after {
  width: 100%;
}

/* DIVIDER */
.footer-divider {
  width: 100%;
  margin: 30px 0;
  height: 1px;
  background: rgba(255, 255, 255, 0.3);
}


/* FOOTER BOTTOM SECTION */

.footer-bottom {
  width: 100%;
  display: flex;
  justify-content: space-between; /*left & right alignment */
  align-items: center;
  flex-wrap: wrap;
  gap: 20px;
  text-align: left; /* stop centering */
}

/* LEFT TEXT BLOCK */
.footer-bottom p {
  margin: 0;
  font-size: 16px;
  line-height: 1.6;
}

/* RIGHT LINK */
.footer-links {
  display: flex;
  align-items: center;
}

/* DESIGNER LINK */
.designer-link,
.group-link {
  color: #93c5fd;
  text-decoration: none;
  font-weight: 500;
  position: relative;
  transition: color 0.3s ease;
}

.designer-link:hover,
.group-link:hover {
  color: #60a5fa;
}

/* UNDERLINE EFFECT */
.designer-link::after,
.group-link::after,
.footer-links a::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -3px;
  width: 0%;
  height: 2px;
  background: #60a5fa;
  transition: width 0.3s ease;
}

.designer-link:hover::after,
.group-link:hover::after,
.footer-links a:hover::after {
  width: 100%;
}

/* TSA LINK */
.footer-links a {
  font-size: 16px;
  font-weight: 600;
  color: #e2e8f0;
  text-decoration: none;
  position: relative;
  transition: color 0.3s ease;
}

.footer-links a:hover {
  color: #60a5fa;
}

/* RESPONSIVE FIX  */

@media (max-width: 768px) {
  .footer-bottom {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }
}

